[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level2_Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level2_Constructed.gd" type="Script" id=3]
[ext_resource path="res://Level2_BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level3_Constructed.tscn" type="PackedScene" id=5]

[node name="Level2_Constructed" type="Node"]
script = ExtResource( 3 )
next_level_path = ExtResource( 5 )

[node name="Level2_BG" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 664 )

[node name="Level2_Map" parent="." instance=ExtResource( 1 )]

[connection signal="is_human" from="Player" to="Level2_Map" method="_on_Player_is_human"]
[connection signal="is_spirit" from="Player" to="Level2_Map" method="_on_Player_is_spirit"]
[connection signal="respawned" from="Player" to="." method="_on_Player_respawned"]
[connection signal="earth_collect" from="Level2_Map" to="Player" method="_on_Level2_Map_earth_collect"]
[connection signal="level_complete" from="Level2_Map" to="." method="_on_Level2_Map_level_complete"]
[connection signal="message_to_player" from="Level2_Map" to="Player" method="message_to_player"]
